# f1-tsp

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: aco.rs  dijkstra.rs  distance.rs  dotting.rs  f1-locations.json  graphing.rs  main.rs  nearest_neighbour.rs  parse.rs  simulated_annealing.rs  wfi.rs
